Fix bug where auth0 was not updated properly